Added Module Participations to dashboard
